# thumber

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/: dependabot.yml
src/thumber/: main.py
