[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"


[project.scripts]
thumber = "thumber.main:main"


[project]
name = "thumber"
version = "0.3.0"
#dynamic = ["version"]
authors = [
  { name="lvxvvv" },
]
maintainers = [
  {name = "lvxvvv"}
]

description = "Create thumbnails. Specify dimensions or aspect ratio."

readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English"
]


dependencies = [
  "pillow>=11.1.0,<12.0"
]

keywords = ["thumbnail", "image", "filter", "ratio", "aspect ratio", "crop"]

license = { file = "LICEN[CS]E*" }

[project.urls]
Homepage = "https://github.com/lvxvvv/thumber"
Repository = "https://github.com/lvxvvv/thumber.git"
Issues = "https://github.com/lvxvvv/thumber/issues"
Mastodon = "https://mastodon.social/@lvxvvv"
Twitter = "https://x.com/lvxvvv"
Changelog = "https://github.com/lvxvvv/thumber/blob/main/CHANGELOG.md"
